# PlasmaToolkit

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
cmake/: FindNCCL.cmake  PTAddTest.cmake  PTToolchainCUDA.cmake  ToolchainCUDA.cmake
doc/source/: conf.py  dependency.rst  index.rst
example/: CMakeLists.txt
example/hello/: CMakeLists.txt  main.c
example/mimd/: CMakeLists.txt  README.rst  mpi_client.c  mpi_server.c
example/rma/: CMakeLists.txt  README.rst  mpi_rma.c
include/pt/: algorithm.h  application.h  config.h.in  container.h  foundation.h  method.h
include/pt/algorithm/: blas.h  lapack.h  linear_solver.h  range.h
include/pt/application/: advection.h  pde.h
include/pt/container/: buffer.h  matrix.h  pool.h  vector.h
include/pt/core/: backtrace.h  context.h  info.h  log.h  macro.h  math.h  memory.h  status.h  tag.h  type.h  version.h
include/pt/foundation/: context.h  error.h  io.h  macro.h  math.h  memory.h  tag.h  test.h
include/pt/method/: fd.h  rk.h
include/pt/profile/: timer.h  tracker.h
include/pt/test/: assert.h  benchmark.h  check.h  expect.h  unit.h
machine/apple/m1/: gnu.sh  llvm.sh
src/: CMakeLists.txt
src/algorithm/: CMakeLists.txt  acquire_linear_solver.c  acquire_range.c  acquire_range_iterator.c  advance_range_iterator.c  apply_linear_solver.c  dgemm.c  dgesv.c  dgetrf.c  dgetrs.c  dscal.c  dscal.f90  find_index.c  prepare_linear_solver.c  release_linear_solver.c  release_range.c  release_range_iterator.c  reset_range_iterator.c
src/algorithm/mesh/: CMakeLists.txt
src/algorithm/range/: CMakeLists.txt
src/algorithm/solver/: CMakeLists.txt
src/application/: CMakeLists.txt
src/application/euler/: CMakeLists.txt
src/application/fusion/: CMakeLists.txt
src/application/mhd/: CMakeLists.txt
src/container/: CMakeLists.txt  acquire_buffer.c  fetch_buffer_element.c  fetch_buffer_element_impl.c  release_buffer.c
src/container/buffer/: CMakeLists.txt  acquire_buffer.c  release_buffer.c  send_buffer.c  send_buffer_d2d.c  send_buffer_d2h.c  send_buffer_h2d.c  send_buffer_h2h.c
src/container/buffer/device/: CMakeLists.txt  acquire_buffer_d.c  release_buffer_d.c
src/container/buffer/host/: CMakeLists.txt  acquire_buffer_h.c  release_buffer_h.c
src/container/vector/host/: CMakeLists.txt  acquire_vector_h_impl.c  release_vector_h.c
src/core/: CMakeLists.txt
src/core/backtrace/: CMakeLists.txt  print_backtrace.c
src/core/context/: CMakeLists.txt  acquire_context.c  finalize_context.c  finalize_context_api.c  finalize_context_interface.c  initialize_context.c  initialize_context_api.c  initialize_context_interface.c  release_context.c
src/core/context/local/: CMakeLists.txt  acquire_context_local.c  finalize_context_local.c  initialize_context_local.c  release_context_local.c
src/core/context/mpi/: CMakeLists.txt  acquire_context_mpi.c  finalize_context_mpi.c  initialize_context_mpi.c  release_context_mpi.c
src/core/context/nccl/: CMakeLists.txt  acquire_context_nccl.c  finalize_context_nccl.c  get_host_hash.c  initialize_context_nccl.c  release_context_nccl.c
src/core/info/: CMakeLists.txt  print_info.c
src/core/log/: CMakeLists.txt  emit_log.c  get_verbosity_name.c
src/core/math/: CMakeLists.txt  get_hash.c  get_sign_impl_f32.c  get_sign_impl_f64.c
src/core/memory/device/: CMakeLists.txt  calloc_d_impl.c  free_d_impl.c  free_d_impl.cu  malloc_d_impl.c
src/core/memory/host/: CMakeLists.txt  calloc_h_impl.c  free_h_impl.c  malloc_h_impl.c  memcpy_h_impl.c
src/core/status/: CMakeLists.txt  abort.c  get_status_name.c  ignore.c  invoke_impl.c
src/core/tag/: CMakeLists.txt  get_tag_name.c
src/core/version/: CMakeLists.txt  print_version.c
src/dependency/: CMakeLists.txt
src/foundation/: CMakeLists.txt  acquire_context.c  acquire_context_impl_local.c  aligned_alloc_impl.c  calloc_impl.c  free_impl.c  get_context_id.c  get_context_size.c  get_error_message.c  invoke_impl.c  log.c  malloc_impl.c  realloc_impl.c  release_context.c  set_context_id.c  sign_double.c  sign_float.c  test_assert_equal_impl_double.c  test_assert_equal_impl_int.c  test_assert_impl.c  test_invoke_impl.c
src/io/: CMakeLists.txt
src/method/: CMakeLists.txt
src/profile/: CMakeLists.txt
src/profile/timer/: CMakeLists.txt  acquire_timer.c  release_timer.c  start_timer.c  stop_timer.c
src/profile/tracker/: CMakeLists.txt  acquire_tracker.c  attach_tracker_port.c  get_tracker_port.c  release_tracker.c  start_tracker.c  stop_tracker.c
src/test/: CMakeLists.txt
src/test/assert/: CMakeLists.txt  assert_impl.c
src/test/check/: CMakeLists.txt  check_equal_impl_f32.c  check_equal_impl_f64.c  check_equal_impl_i32.c  check_impl.c  check_same_impl_char_pointer.c  check_same_impl_char_ptr.c  check_same_impl_i32.c  check_same_impl_void_pointer.c
src/test/expect/: CMakeLists.txt  expect_impl.c
test/: CMakeLists.txt
test/algorithm/unit/: CMakeLists.txt  getrf.c  linear_solver.c  scal.c
test/container/: CMakeLists.txt
test/container/unit/: CMakeLists.txt  fetch_vector_element.c
test/container/vector/unit/src/: CMakeLists.txt  test_acquire_vector_h.c  test_release_vector_h.c
test/core/: CMakeLists.txt
test/core/context/unit/src/: CMakeLists.txt  acquire_context_nccl.c  test_acquire_context.c  test_acquire_context_local.c  test_acquire_context_mpi.c  test_acquire_context_nccl.c
test/core/log/unit/src/: CMakeLists.txt  test_emit_log.c  test_get_verbosity_name.c
test/core/memory/host/unit/src/: CMakeLists.txt  test_calloc.c  test_calloc_h.c  test_free.c  test_free_h.c  test_malloc.c  test_malloc_h.c
test/core/status/unit/src/: CMakeLists.txt  test_abort.c  test_abort_skip.c  test_get_status_name.c  test_ignore.c
test/core/tag/unit/src/: CMakeLists.txt  test_get_tag_name.c
test/dependency/: CMakeLists.txt
test/mpi/unit/src/: CMakeLists.txt  test_mpi_reduce.c
test/openmp/unit/src/: CMakeLists.txt  test_openmp_reduce.c
test/profile/timer/unit/src/: CMakeLists.txt  test_acquire_timer.c
test/profile/tracker/unit/src/: CMakeLists.txt  test_acquire_tracker.c
tool/lsan/: darwin_arm64.txt
(+56 files in other folders)
